Add labels to run summary
