# api/data/v1/data.swagger.json
@@ -757,6 +757,12 @@
         "testRunConfig": {
           "$ref": "#/definitions/TestRunConfig"
         },
+        "labels": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          }
+        },
         "runnerId": {
           "type": "string"
         },
